--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,22 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
-	  <title>AirBnB clone</title>
+		<title>AirBnB clone</title>
 
-	  <link href="styles/3-common.css" rel="stylesheet" type="text/css">
-	  <link href="styles/3-footer.css" rel="stylesheet" type="text/css">
-	  <link href="styles/3-header.css" rel="stylesheet" type="text/css">
+		<link rel="shortcut icon" href="images/icon.ico" >
 
+		<link rel="stylesheet" href="styles/3-common.css"/>
+		<link rel="stylesheet" href="styles/3-header.css"/>
+		<link rel="stylesheet" href="styles/3-footer.css"/>
 	</head>
+    <body>
+		<header>
+			<div id="header_logo"></div>
+		</header>
 
-	<body>
-	<header>
-	<!--<img class="logo" src="images/logo.png"/>-->
-	</header>
-
-
-	  <footer>
-	    <p> Holberton School </p>
-	  </footer>
-
+		<footer>
+			<p>Holberton School</p>
+		</footer>
 	</body>
 </html>
