--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,21 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
-	  <title> AirBnB clone </title>
-	  <link href="styles/2-common.css" rel="stylesheet" type="text/css">
-	  <link href="styles/2-footer.css" rel="stylesheet" type="text/css">
-	  <link href="styles/2-header.css" rel="stylesheet" type="text/css">
+		<title>AirBnB clone</title>
 
+		<link rel="stylesheet" href="styles/2-common.css"/>
+		<link rel="stylesheet" href="styles/2-header.css"/>
+		<link rel="stylesheet" href="styles/2-footer.css"/>
 	</head>
+    <body>
+		<header>
+		</header>
 
-	<body>
-	  <header>
-
-	  </header>
-
-
-	  <footer>
-	    <p> Holberton School </p>
-	  </footer>
-
+		<footer>
+			<p>Holberton School</p>
+		</footer>
 	</body>
 </html>
