--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,38 +1,35 @@
-<html>
-  <head>
-    <title> AirBnB clone </title>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>AirBnB clone</title>
 
-    <link href="styles/4-common.css" rel="stylesheet" type="text/css">
-    <link href="styles/3-footer.css" rel="stylesheet" type="text/css">
-    <link href="styles/3-header.css" rel="stylesheet" type="text/css">
-    <link href="styles/5-filters.css" rel="stylesheet" type="text/css">
-  </head>
+		<link rel="shortcut icon" href="images/icon.ico" >
 
-  <body>
-    <header>
-      <!-- <img class="logo" src="images/logo.png"/>-->
-    </header>
+		<link rel="stylesheet" href="styles/4-common.css"/>
+		<link rel="stylesheet" href="styles/3-header.css"/>
+		<link rel="stylesheet" href="styles/3-footer.css"/>
+		<link rel="stylesheet" href="styles/5-filters.css"/>
+	</head>
+    <body>
+		<header>
+			<div id="header_logo"></div>
+		</header>
+		<div class="container">
+			<section class="filters">
+				<button>Search</button>
+				<div class="locations">
+					<h3>States</h3>
+					<h4>California, Arizona...</h4>
+				</div>
+				<div class="amenities">
+					<h3>Amenities</h3>
+					<h4>Internet, Kitchen...</h4>
+				</div>
 
-
-    <div class="container">
-      <section class="filters">
-	<button> Search </button>
-
-	<div class="locations">
-	  <h3 class="_h3"> States </h3>
-	  <h4 class="_h4"> California, Arizona </h4>
-
-	</div>
-	<div class="amenities">
-	  <h3 class="_h3"> Amenities </h3>
-	  <h4 class="_h4"> Internet, kitchen </h4>
-	</div>
-      </section>
-    </div>
-
-    <footer>
-      <p> Holberton School </p>
-    </footer>
-
-  </body>
+			</section>
+		</div>
+		<footer>
+			<p>Holberton School</p>
+		</footer>
+	</body>
 </html>
