--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,61 +1,53 @@
-<html>
-  <head>
-    <title> AirBnB clone </title>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>AirBnB clone</title>
 
-    <link href="styles/4-common.css" rel="stylesheet" type="text/css">
-    <link href="styles/3-footer.css" rel="stylesheet" type="text/css">
-    <link href="styles/3-header.css" rel="stylesheet" type="text/css">
-    <link href="styles/6-filters.css" rel="stylesheet" type="text/css">
-  </head>
+		<link rel="shortcut icon" href="images/icon.ico" >
 
-  <body>
-    <header>
-      <!-- <img class="logo" src="images/logo.png"/>-->
-    </header>
+		<link rel="stylesheet" href="styles/4-common.css"/>
+		<link rel="stylesheet" href="styles/3-header.css"/>
+		<link rel="stylesheet" href="styles/3-footer.css"/>
+		<link rel="stylesheet" href="styles/6-filters.css"/>
+	</head>
+    <body>
+		<header>
+			<div id="header_logo"></div>
+		</header>
+		<div class="container">
+			<section class="filters">
+				<button>Search</button>
+				<div class="locations">
+					<h3>States</h3>
+					<h4>California, Arizona...</h4>
+					<ul class="popover">
+						<li><h2>Arizona</h2>
+							<ul>
+								<li><h4>Page</h4></li>
+								<li><h4>Page2</h4></li>
+							</ul></li>
+						<li><h2>California</h2>
+							<ul>
+								<li><h4>San Francisco</h4></li>
+								<li><h4>Los Altos</h4></li>
+							</ul></li>
+					</ul>
+				</div>
+				<div class="amenities">
+					<h3>Amenities</h3>
+					<h4>Internet, Kitchen...</h4>
+					<ul class="popover">
+						<li><h4>Internet</h4></li>
+						<li><h4>TV</h4></li>
+						<li><h4>Kitchen</h4></li>
+						<li><h4>Iron</h4></li>
+					</ul>
+				</div>
 
-
-    <div class="container">
-      <section class="filters">
-	<button> Search </button>
-
-	<div class="locations">
-	  <h3 class="_h3"> States </h3>
-	  <h4 class="_h4"> California, Arizona </h4>
-
-
-	    <ul class="popover">
-	      <li><h2>California</h2></li>
-		<ul>
-		  <li><h4>San francisco </h4></li>
-		  <li><h4>Los altos</h4></li>
-		</ul>
-		<li><h2>Arizona</h2></li>
-		<ul>
-		  <li><h4>space1</h4></li>
-		  <li><h4>space2</h4></li>
-		</ul>
-	    </ul>
-
-	</div>
-	<div class="amenities">
-	  <h3 class="_h3"> Amenities </h3>
-	  <h4 class="_h4"> Internet, kitchen </h4>
-	  <ul class="popover">
-
-		<li><h4>Internet</h4></li>
-		<li><h4>Tv</h4></li>
-		<li><h4>kitchen</h4></li>
-		<li><h4>Iron</h4></li>
-
-	  </ul>
-	</div>
-      </section>
-
-    </div>
-
-    <footer>
-      <p> Holberton School </p>
-    </footer>
-
-  </body>
+			</section>
+		</div>
+		<footer>
+			<p>Holberton School</p>
+		</footer>
+	</body>
 </html>
