--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,174 +1,129 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
-		<title> AirBnB clone </title>
+		<title>AirBnB clone</title>
 
-		<link href="styles/4-common.css" rel="stylesheet" type="text/css">
-		<link href="styles/3-footer.css" rel="stylesheet" type="text/css">
-		<link href="styles/3-header.css" rel="stylesheet" type="text/css">
-		<link href="styles/6-filters.css" rel="stylesheet" type="text/css">
-		<link href="styles/8-places.css" rel="stylesheet" type="text/css">
+		<link rel="shortcut icon" href="images/icon.ico" >
+
+		<link rel="stylesheet" href="styles/4-common.css"/>
+		<link rel="stylesheet" href="styles/3-header.css"/>
+		<link rel="stylesheet" href="styles/3-footer.css"/>
+		<link rel="stylesheet" href="styles/6-filters.css"/>
+		<link rel="stylesheet" href="styles/8-places.css"/>
 	</head>
-
-	<body>
+    <body>
 		<header>
-		<!-- <img class="logo" src="images/logo.png"/>-->
+			<div id="header_logo"></div>
 		</header>
-
-
 		<div class="container">
 			<section class="filters">
-				<button> Search </button>
-
+				<button>Search</button>
 				<div class="locations">
-				<h3 class="_h3"> States </h3>
-				<h4> California, Arizona </h4>
-
-
+					<h3>States</h3>
+					<h4>California, Arizona...</h4>
 					<ul class="popover">
-					<li><h2 class="_h2">California</h2></li>
-					<ul>
-					<li><h4>San francisco </h4></li>
-					<li><h4>Los altos</h4></li>
+						<li><h2>Arizona</h2>
+							<ul>
+								<li><h4>Page</h4></li>
+								<li><h4>Page2</h4></li>
+							</ul></li>
+						<li><h2>California</h2>
+							<ul>
+								<li><h4>San Francisco</h4></li>
+								<li><h4>Los Altos</h4></li>
+							</ul></li>
 					</ul>
-					<li><h2 class="_h2">Arizona</h2></li>
-					<ul>
-					<li><h4>space1</h4></li>
-					<li><h4>space2</h4></li>
-					</ul>
-					</ul>
-
 				</div>
 				<div class="amenities">
-					<h3 class="_h3"> Amenities </h3>
-					<h4> Internet, kitchen </h4>
+					<h3>Amenities</h3>
+					<h4>Internet, Kitchen...</h4>
 					<ul class="popover">
-
-						<li><h4 class="_h4">Internet</h4></li>
-						<li><h4 class="_h4">Tv</h4></li>
-						<li><h4 class="_h4">kitchen</h4></li>
-						<li><h4 class="_h4">Iron</h4></li>
-
+						<li><h4>Internet</h4></li>
+						<li><h4>TV</h4></li>
+						<li><h4>Kitchen</h4></li>
+						<li><h4>Iron</h4></li>
 					</ul>
 				</div>
+
 			</section>
-
-		<!-- point7-->
-
 			<section class="places">
-				<h1> Places </h1>
-				<article class="_article_1">
-					<div class="new_div">
-						<h2 class="_h2">My home</h2>
-						<div class="price_by_night">
-							$65
-						</div>
-
-						<div class="information">
-
-								<div class="max_guest">
-									<div class="_guests">
-									</div>
-									<p> 2 Guests </p>
-								</div>
-
-								<div class="number_rooms">
-
-									<div class="_rooms">
-									</div>
-									<p> 1 Bedrooms </p>
-								</div>
-
-								<div class="number_bathrooms">
-									<div class="_bathrooms">
-									</div>
-									<p> 1 Bathrooms </p>
-								</div>
-
-						</div>
-					</div>
-					<div class="user">
-						<p class="description"><b>Owner</b>: John Lennon</p>
-
-					<p class="description">
-						This is a lovely 1 bedroom and 1 bathroom apartment that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.
-						<br> <br>
-						<br> <br>
-						<br> <br>
-					</p>
-					</div>
-				</article>
-
-
+				<h1>Places</h1>
 				<article>
-					<div class="new_div">
-						<h2 class="_h2">Tiny house</h2>
-						<div class="price_by_night">$85</div>
-						<div class="information">
-
-							<div class="max_guest">
-								<div class="_guests"> </div>
-								<p> 2 Guests </p>
-							</div>
-
-							<div class="number_rooms">
-								<div class="_rooms"> </div>
-								<p> 1 Bedrooms </p>
-							</div>
-
-							<div class="number_bathrooms">
-								<div class="_bathrooms"> </div>
-								<p> 1 Bathrooms </p>
-							</div>
-
+					<div class="headline">
+						<h2>My home</h2>
+						<div class="price_by_night">$80</div>
+					</div>
+					<div class="information">
+						<div class="max_guest">
+							<div class="guest_icon"></div>
+							<p>2 Guests</p>
+						</div>
+						<div class="number_rooms">
+							<div class="bed_icon"></div>
+							<p>1 Bedroom</p>
+						</div>
+						 <div class="number_bathrooms">
+							<div class="bath_icon"></div>
+							<p>1 Bathroom</p>
 						</div>
 					</div>
-					<div class="user">
-						<p class="description"><b>Owner</b>: Adrienne</p>
-
-					<p class="description">
-                       Our place is a private, affordable stand-alone guest house centrally located just minutes to French Quarters, downtown, the Fair Grounds(Jazz Fest) and City Park. The guest house is a quaint, 400 square ft. with a full bath, mini kitchen, & living room. The extra high ceilings make the home feel more spacious. The sofa converts to a bed also. We have a hand made counter area that adds character to the room and a great porch/deck to relax on and have a glass of Merlot.
-                    </p>
-					</div>
-				</article>
-
-				<article class="_article">
-					<div class="new_div">
-						<h2 class="_h2">A suite</h2>
-						<div class="price_by_night">$195</div>
-						<div class="information">
-
-							<div class="max_guest">
-								<div class="_guests"> </div>
-								<p> 2 Guests </p>
-							</div>
-
-							<div class="number_rooms">
-								<div class="_rooms"> </div>
-								<p> 1 Bedrooms </p>
-							</div>
-
-							<div class="number_bathrooms">
-								<div class="_bathrooms"> </div>
-								<p> 1 Bathrooms </p>
-							</div>
-
-						</div>
-					</div>
-					<div class="user">
-						<p class="description"><b>Owner</b>: John Lennon</p>
-
-					<p class="description">
+					<div class="user"><b>Owner</b>: John Lennon</div>
+					<div class="description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    </p>
+                    </div>
+				</article>
+				<article>
+					<div class="headline">
+						<h2>Tiny house</h2>
+						<div class="price_by_night">$65</div>
+					</div>
+					<div class="information">
+                        <div class="max_guest">
+                            <div class="guest_icon"></div>
+                            <p>4 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <div class="bed_icon"></div>
+                            <p>2 Bedroom</p>
+                        </div>
+                         <div class="number_bathrooms">
+                            <div class="bath_icon"></div>
+                            <p>1 Bathroom</p>
+                        </div>
+                    </div>
+					<div class="user"><b>Owner</b>: Adrienne</div>
+					<div class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+				</article>
+				<article>
+					<div class="headline">
+						<h2>A suite</h2>
+						<div class="price_by_night">$180</div>
+					</div>
+					<div class="information">
+                        <div class="max_guest">
+                            <div class="guest_icon"></div>
+                            <p>5 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <div class="bed_icon"></div>
+                            <p>3 Bedroom</p>
+                        </div>
+                         <div class="number_bathrooms">
+                            <div class="bath_icon"></div>
+                            <p>2 Bathroom</p>
+                        </div>
+                    </div>
+					<div class="user"><b>Owner</b>: Betty Holberton</div>
+					<div class="description">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 					</div>
 				</article>
 			</section>
 		</div>
-
-
 		<footer>
-		<p class="_p"> Holberton School </p>
+			<p>Holberton School</p>
 		</footer>
-
 	</body>
 </html>
